<resources>
    <string name="app_name">Patient Doctor Consultation</string>

    <string name="menu_title_home">Home</string>
    <string name="menu_title_profile">Profile</string>
    <string name="menu_title_preferences">Preferences</string>

    <!--Profile Fragment-->
    <string name="label_profile_first_name">First Name</string>
    <string name="label_profile_last_name">Last Name</string>
    <string name="label_profile_gender">Gender</string>
    <string name="label_profile_height">Height (cm)</string>
    <string name="label_profile_weight">Weight (kg)</string>
    <string name="label_profile_age">Date of Birth</string>
    <string name="label_medical_conditions">Medical Conditions</string>
    <string name="profile_hint_gender">Male</string>
    <string name="profile_hint_age">12/07/1999</string>
    <string name="profile_hint_weight">85</string>
    <string name="profile_hint_last_name">Smith</string>
    <string name="profile_hint_first_name">John</string>
    <string name="profile_hint_height">185</string>
    <string name="profile_medical_conditions">Medical Condition 1 \nMedical Condition 2</string>
    <string name="submit">Save</string>
    <string name="home_card_title_data_packet">Data Packets</string>
    <string name="home_card_title_doctors">Doctors</string>
    <string name="home_card_title_nearby">Nearby Medical Facilities</string>
    <string name="add">+</string>
    <string name="hint_title">Title</string>
    <string name="hint_enter_text">Enter text</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">264592337713075</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb264592337713075</string>
    <string name="default_text">- -</string>
    <string name="bpm">bpm</string>
    <string name="hints">(hints: Please wait about 5-10s)</string>
    <string name="refer">Reference</string>
    <string name="details">
Adults have about seventy to eighty beats per minute, but between 60 and 100 times are normal. When you work, you have to jump faster than when you are quiet. Women are faster than men. Children are jumping faster than adults. Newborns can jump 150 times per minute.</string>
    <string name="retry">retry</string>
</resources>
